# AIs-of-spades

./: .gitignore  404.html  README.md  index.html  main.py  objects.inv  pyproject.toml  requirements.txt  training.slurm  trainingCPUs.slurm
Daniel/: pettingzoo.ipynb
checkpoints/: epoch_0.pt
playground/: playground.ipynb  playground.py
pokerenv/: table.py
reference/src/: index.html
reference/src/main/: index.html
reference/src/nn/: index.html
reference/src/poker_ui/: index.html
reference/src/pokerenv/: index.html
reference/src/test_player/: index.html
reference/src/test_table/: index.html
search/: search_index.json
src/: PlayerAgent.py  README.md  config.py  config.yaml  episodes_loop.py  game_loop.py  learning_loop.py  main.py  player_agent.py  poker_net.py  poker_ui.py  start_ui_host.py  test.py  test_player.py  test_table.py  training_episodes.py  weight_manager.py
src/nn/: __init__.py  fede_net.py  model_classes.py  nn-ines  nn.py  nn_ines.py  nn_lookahead.py  nn_lookahead_MCTS.py  poker_net.py
src/nn/dani_net/: __init__.py  dani_net.py
src/nn/even_net/: __init__.py  _bets_nn.py  _cards_cnn.py  _utils.py  (+3 more)
src/pokerenv/: Observation.py  OpponentPool.py  action.py  common.py  game_loop.py  learning_loop.py  main.py  observation.py  player.py  player_agent.py  table.py  utils.py  weight_manager.py
src/training/: game_loop.py  learning_loop.py  player_agent.py  wandb_compat.py  weight_manager.py
src/ui/: html_client.py  ui_agent_player.py  ui_player.py  ui_table_manager.py
tests/: test_dani_net.py
ui_weights/even_net/: weights.pt
(+55 files in other folders)
