[project]
name = "PROJECT-TEMPLATE"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
dependencies = [
    "uv",
    "numpy",
    "treys",
    "gym>=0.26.2",
    "pillow>=12.1.1",
    "torch>=2.10.0",
]


[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-api-autonav>=0.3.0",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-awesome-nav>=3.1.2",
    "mkdocs-material>=9.6.16",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.16.12",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

#[tool.uv]
#required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
#
#[[tool.uv.index]]
#name = "pytorch-rocm"
#url = "https://download.pytorch.org/whl/rocm6.4"
#explicit = true
#
#[tool.uv.sources]
#torch = [
#    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
#]